syntax = "proto3";

package chatservice;
option go_package = "proto/chatservice";

import "proto/streammsg/streammsg.proto";

service ChatService {
  rpc Chat(stream streammsg.StreamReq) returns (stream streammsg.StreamResp) {}
}


/*
protoc -I . \
--go_out=. --go_opt paths=source_relative \
--go-grpc_out=. --go-grpc_opt paths=source_relative \
proto/chatservice/chatservice.proto
*/